# cango.spdlog

./: .gitignore  CMakeLists.txt
include/spdlog/: async.h  async_logger.h  common-inl.h  common.h  formatter.h  fwd.h  logger.h  mdc.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h  tweakme.h  version.h
include/spdlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
include/spdlog/details/: backtracer.h  circular_q.h  console_globals.h  file_helper.h  fmt_helper.h  log_msg.h  log_msg_buffer.h  mpmc_blocking_q.h  null_mutex.h  os.h  periodic_worker.h  registry-inl.h  registry.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h  udp_client-windows.h  udp_client.h  windows_include.h
include/spdlog/fmt/: fmt.h
include/spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  callback_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  kafka_sink.h  mongo_sink.h  null_sink.h  ostream_sink.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks-inl.h  (+8 more)
src/: ansicolor_sink.cpp  async.cpp  async_logger.cpp  backtracer.cpp  color_sinks.cpp  common.cpp  file_helper.cpp  file_sinks.cpp  helpers.cpp  log_msg.cpp  log_msg_buffer.cpp  logger.cpp  os.cpp  pattern_formatter.cpp  periodic_worker.cpp  registry.cpp  rotating_file_sink.cpp  spdlog.cpp  stdout_color_sinks.cpp  stdout_sinks.cpp  thread_pool.cpp  wincolor_sink.cpp
